--- a/placarPPR/static/css/placarPPR.css
+++ b/placarPPR/static/css/placarPPR.css
@@ -1,28 +1,36 @@
+/*Página Principal*/
 h1 a {
     color: #FCA205;
-    font-family: 'Lobster';
+    font-family: 'Kreon', serif;
+    font-size: 20pt;
+}
+
+.lucas {
+    font-family: 'Kreon', serif;
+    font-size: 10pt;
 }
 body {
     padding-left: 15px;
 }
 .page-header {
-    background-color: #0080FF;
+    background-color: #244ca4;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
-    font-size: 36pt;
+    font-size: 20pt;
     text-decoration: none;
 }
 
 .content {
-    margin-left: 40px;
+    margin-left: 20px;
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Kreon', serif;
+    font-size: 15pt;
 }
 
 .date {
