--- a/placarPPR/templates/placarPPR/base.html
+++ b/placarPPR/templates/placarPPR/base.html
@@ -4,15 +4,16 @@
         <title>Placar PPR - GRUPO RBS</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/placarPPR.css' %}">
+        <link href="https://fonts.googleapis.com/css?family=Kreon:700" rel="stylesheet">
+
     </head>
     <body>
         <div class="page-header">
             {% if user.is_authenticated %}
 				<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 			{% endif %}
-            <h1><a href="/">Placar PPR 1</a></h1>
+            <h1><a href="/">PPR - EBITDAP ACUMULADO GRUPO RBS RS</a></h1>
         </div>
         <div class="content container">
             <div class="row">
