--- a/placarPPR/templates/placarPPR/base.html
+++ b/placarPPR/templates/placarPPR/base.html
@@ -9,11 +9,12 @@
 
     </head>
     <body>
+                <img class="imagem" src="http://comercial.gruporbs.com.br/wp-content/uploads/2017/12/logo_grupo_branco-01-1.png" alt="logo_GrupoRBS" width="100" right="90">
         <div class="page-header">
             {% if user.is_authenticated %}
 				<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 			{% endif %}
-            <h1><a href="/">PPR - EBITDAP ACUMULADO GRUPO RBS RS</a></h1>
+            <h1><a href="/">PPR - EBITDAP ACUMULADO</a></h1>
         </div>
         <div class="content container">
             <div class="row">
