--- a/placarPPR/templates/placarPPR/base.html
+++ b/placarPPR/templates/placarPPR/base.html
@@ -23,7 +23,7 @@
 
     </head>
     <body>
-                <a href="/"><img class="imagem" src="http://comercial.gruporbs.com.br/wp-content/uploads/2017/12/logo_grupo_branco-01-1.png" alt="logo_GrupoRBS" width="100" right="90"></a>
+	    <a href="/"><img class="imagem" src="{% static 'logo_gruporbs.png' %}" alt="logo_GrupoRBS" width="100" right="90"></a>
         <div class="page-header">
             {% if user.is_authenticated %}
 				<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
